@@ -18,6 +18,7 @@
 
 import os
 import os.path
+import stat
 import datetime
 import gettext
 import statvfs
@@ -163,12 +164,22 @@ class Snapshots:
 			pass
 
 		list = []
-		
+
+		current_snapshot = '99999999-999999'
+		try:
+			instance_file = self.config.get_take_snapshot_instance_file()
+			if os.path.exists( instance_file ):
+				ctime = os.stat( instance_file )[stat.ST_CTIME]
+				current_snapshot = self.get_snapshot_id( datetime.datetime.fromtimestamp( ctime ) )
+		except:
+			pass
+
 		for item in biglist:
 			if len( item ) != 15:
 				continue
 			if os.path.isdir( os.path.join( snapshots_path, item ) ):
-				list.append( item )
+				if item < current_snapshot:
+					list.append( item )
 
 		list.sort( reverse = sort_reverse )
 		return list
@@ -299,7 +310,7 @@ class Snapshots:
 
 		if len( snapshots ) > 0:
 			prev_snapshot_id = snapshots[0]
-			prev_snapshot_name = self.get_snapshot_id( prev_snapshot_id )
+			prev_snapshot_name = self.get_snapshot_display_id( prev_snapshot_id )
 			self.set_take_snapshot_message( 0, _("Working: Compare with snapshot %s") % prev_snapshot_name )
 			logger.info( "Compare with old snapshot: %s" % prev_snapshot_id )
 			
