@@ -1,6 +1,7 @@
 Back In Time
 
 Version 0.9.16
+* don't show the snapshot that is being taken (not finished yet) in snapshots list
 * GNOME & KDE4: when the application starts and snapshots directory don't exists show a messagebox
 * give more information for 'take snapshot' progress (to prove that is not blocked)
 * MainWindow: rename 'Timeline' column with 'Snapshots'
